--- a/css/styles.css
+++ b/css/styles.css
@@ -656,6 +656,19 @@ section,
     object-position: center;
 }
 
+@media screen and (min-width: 1600px) {
+
+    .section_h .section_img_container,
+    .section_v .section_img_container  {
+        height: 650px;
+    } 
+
+    .mendoza_text {
+        max-width: 800px;
+    }
+    
+}
+
 
 @media screen and (max-width: 1000px) {
 
@@ -685,11 +698,6 @@ section,
 
     .mendoza_text {
         padding: 0;
-    }
-
-    .mza .section_h .section_img_container {
-        width: 100%;
-        height: 350px;
     }
 
 }
@@ -762,6 +770,15 @@ section,
 
 @media screen and (max-width: 768px) {
 
+    .mza .section_h {
+        min-height: auto;
+    }
+
+    .mza .section_h .section_img_container {
+        height: auto;
+        margin: 0;
+    }
+
     .img--01,
     .img--02 {
         max-width: 49%;
@@ -833,7 +850,6 @@ section,
     }
 
     .section_h .section_img_container,
-    .mza .section_h .section_img_container,
     .section_v .section_img_container  {
         height: 300px;
     } 
@@ -869,8 +885,7 @@ section,
     }
 
     .section_h .section_img_container,
-    .mza .section_h .section_img_container,
-    .section_v .section_img_container  {
+    .section_v .section_img_container {
         height: 250px;
     } 
 
