Hide slider navigation on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -843,6 +843,11 @@ section,
         display: none;
     }
 
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: none;
+    }
+
     .hero_video {
         padding: 0 40px;
     }
