--- a/css/styles.css
+++ b/css/styles.css
@@ -252,9 +252,44 @@ a {
     margin: 0 8px;
 }
 
+.hero {
+    width: 100%;
+    position: relative;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero_white-stripe {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: #ffffff;
+}
+
+.hero_slogan {
+   width: 100%;
+   padding: 24px 12px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.hero_title {
+    font-family: var(--ff-display-font);
+    font-size: var(--28px);
+    font-weight: 400;
+    color: #ffffff;
+}
+
 .swiper {
     width: 100%;
     height: 400px;
+    z-index: 999;
 }
 
 .swiper-slide figure {
@@ -274,51 +309,6 @@ a {
 .swiper-pagination-bullet-active {
     background: #ffffff;
     opacity: 1;
-}
-
-.hero {
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--c-red-wine);
-}
-
-.bg_patch {
-    width: 100%;
-    height: 70px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    background-color: #ffffff;
-}
-
-.hero_video {
-    width: 100%;
-    position: relative;
-    padding: 0 80px;
-    z-index: 20;
-}
-
-video {
-	width: 100%;
-}
-
-.hero_slogan {
-   width: 100%;
-   padding: 24px 12px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.hero_title {
-    font-family: var(--ff-display-font);
-    font-size: var(--28px);
-    font-weight: 400;
-    color: #ffffff;
 }
 
 section {
@@ -684,6 +674,15 @@ section,
 
 @media screen and (min-width: 1600px) {
 
+    .swiper,
+    .swiper-slide figure {
+        height: 550px;
+    }
+
+    .hero_slogan {
+        padding: 32px 12px;
+    }
+    
     .section_h .section_img_container {
         height: 650px;
     } 
@@ -700,6 +699,11 @@ section,
 
 
 @media screen and (max-width: 1000px) {
+
+    .swiper,
+    .swiper-slide figure {
+        height: 350px;
+    }
 
     .section_h .section_article {
         flex-direction: column;
@@ -819,7 +823,7 @@ section,
 
     .swiper,
     .swiper-slide figure {
-        height: 300px;
+        height: 250px;
     }
 
 }
@@ -850,18 +854,30 @@ section,
         display: none;
     }
 
+    .hero {
+        padding: 0 40px;
+    }
+
+    .hero_white-stripe {
+        height: 50px;
+    }
+
+    .hero_slogan {
+        padding: 16px;
+    }
+
+    .hero_title {
+        font-size: var(--24px);
+    }
+
     .swiper,
     .swiper-slide figure {
-        height: 175px;
+        height: 200px;
     }
 
     .swiper-button-prev,
     .swiper-button-next {
         display: none;
-    }
-
-    .hero_video {
-        padding: 0 40px;
     }
     
     section,
